return 4th non repeat char